syntax = "proto3";

package wkt_map;

option go_package = "xgo/tests/pb/pbref";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "tests/proto/cases/references/private.proto";

import "proto/json.proto";

message WKTMap1 {
  // Cases for Enum
  //
  map<string, private.Enum1> f_enum_number1 = 1 [ (json.field) = {
    reference: { map: { value: { enum: { codec: Number } } } }
  } ];
  map<string, private.Enum1> f_enum_number_string1 = 2 [ (json.field) = {
    reference: { map: { value: { enum: { codec: NumberString } } } }
  } ];
  map<string, private.Enum1> f_enum_string1 = 3 [ (json.field) = {
    reference: { map: { value: { enum: { codec: String } } } }
  } ];

  // Cases for google.protobuf.Any
  //
  map<string, google.protobuf.Any> f_any_native1 = 4 [ (json.field) = {
    reference: { map: { value: { any: { codec: Object } } } }
  } ];
  map<string, google.protobuf.Any> f_any_proto1  = 5 [ (json.field) = {
    reference: { map: { value: { any: { codec: Proto } } } }
  } ];

  // Cases for google.protobuf.Duration
  //
  map<string, google.protobuf.Duration> f_duration_native1 = 11 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Object } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_string1 = 12 [ (json.field) = {
    reference: { map: { value: { duration: { codec: String } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_nanosecond1 = 13 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Nanosecond } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_nanosecond_string1 = 14 [ (json.field) = {
    reference: { map: { value: { duration: { codec: NanosecondString } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_microsecond1 = 15 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Microsecond } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_microsecond_string1 = 16 [ (json.field) = {
    reference: { map: { value: { duration: { codec: MicrosecondString } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_millisecond1 = 17 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Millisecond } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_millisecond_string1 = 18 [ (json.field) = {
    reference: { map: { value: { duration: { codec: MillisecondString } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_second1 = 19 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Second } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_second_string1 = 20 [ (json.field) = {
    reference: { map: { value: { duration: { codec: SecondString } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_minute1 = 21 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Minute } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_minute_string1 = 22 [ (json.field) = {
    reference: { map: { value: { duration: { codec: MinuteString } } } }
  } ];

  map<string, google.protobuf.Duration> f_duration_hour1 = 23 [ (json.field) = {
    reference: { map: { value: { duration: { codec: Hour } } } }
  } ];
  map<string, google.protobuf.Duration> f_duration_hour_string1 = 24 [ (json.field) = {
    reference: { map: { value: { duration: { codec: HourString } } } }
  } ];

  // Cases for google.protobuf.Timestamp
  //
  map<string, google.protobuf.Timestamp> f_timestamp_native1 = 31 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: Object } } } }
  } ];
  map<string, google.protobuf.Timestamp> f_timestamp_time_layout1 = 32 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } } } } }
  } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_nano1 = 33 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixNano } } } }
  } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_nano_string1 = 34 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixNanoString } } } }
  } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_micro1 = 35 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixMicro } } } }
  } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_micro_string1 = 36 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixMicroString } } } }
  } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_milli1 = 37 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixMilli } } } }
  } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_milli_string1 = 38 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixMilliString } } } }
  } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_sec1 = 39 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixSec } } } }
  } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_sec_string1 = 40 [ (json.field) = {
    reference: { map: { value: { timestamp: { codec: UnixSecString } } } }
  } ];
}
